--- a/Landing_page.html
+++ b/Landing_page.html
@@ -8,5 +8,9 @@ HTML
 <body>
     <h1>Happy New Year Git Project 2024</h1>
     <p>Ce projet est une démonstration de l'utilisation de Git.</p>
+<ul>
+    <li><a href="Francais.html">Bonne année (Français)</a>
+    </li>
+</ul>
 </body>
 </html>
