Ajout de la page en anglais dans la landing page

--- a/Landing_page.html
+++ b/Landing_page.html
@@ -11,6 +11,8 @@ HTML
 <ul>
     <li><a href="Francais.html">Bonne année (Français)</a>
     </li>
+    <li><a href="Anglais.html">Happy new year (Anglais)</a>
+    </li>
 </ul>
 </body>
 </html>
