--- a/Landing_page.html
+++ b/Landing_page.html
@@ -19,6 +19,8 @@ HTML
     </li> 
     <li><a href="Portugais.html">Tenha um bom ano (Portugais)</a> 
     </li> 
+    <li><a href="Allemand.html">Gutes Jahr (Allemand)</a> 
+    </li> 
 </ul>
 </body>
 </html>
