Ajout de la page en polonais dans la landing page

--- a/Landing_page.html
+++ b/Landing_page.html
@@ -21,6 +21,8 @@ HTML
     </li> 
     <li><a href="Allemand.html">Gutes Jahr (Allemand)</a> 
     </li> 
+    <li><a href="Polonais.html">Miłego roku! (Polonais)</a> 
+    </li> 
 </ul>
 </body>
 </html>
