Modification Italien to Russe

--- a/Landing_page.html
+++ b/Landing_page.html
@@ -15,7 +15,7 @@ HTML
     </li>
     <li><a href="Espagnol.html">Feliz año nuevo(Espagnol)</a> 
     </li> 
-    <li><a href="Italien.html">Buon anno (italien)</a> 
+    <li><a href="Russe.html">Хороший год (Russe)</a> 
     </li> 
 </ul>
 </body>
