Ajout de la page en serbe dans la landing page

--- a/Landing_page.html
+++ b/Landing_page.html
@@ -23,6 +23,8 @@ HTML
     </li> 
     <li><a href="Polonais.html">Miłego roku! (Polonais)</a> 
     </li> 
+    <li><a href="Serbe.html">Добра година (Serbe)</a> 
+    </li> 
 </ul>
 </body>
 </html>
